fix: aligned img to bottom of the header

--- a/assets/styles/components/compactHeader.scss
+++ b/assets/styles/components/compactHeader.scss
@@ -73,6 +73,8 @@ body.compact-header--active {
 	&__image {
 		position: relative;
 		height: 100%;
+		display: flex;
+		align-items: flex-end;
 
 		.#{$class-name}__img {
 			width: 100%;
